bootstrap gobs with grapi gobs using contract dgraph upgrade to 1.1
