# contract/api/european.pb.go
@@ -114,6 +114,8 @@ func (m *European) GetPutcall() string {
 }
 
 type ListEuropeansRequest struct {
+	Ticker               string   `protobuf:"bytes,2,opt,name=ticker,proto3" json:"ticker,omitempty"`
+	Timestamp            float64  `protobuf:"fixed64,3,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -143,6 +145,20 @@ func (m *ListEuropeansRequest) XXX_DiscardUnknown() {
 }
 
 var xxx_messageInfo_ListEuropeansRequest proto.InternalMessageInfo
+
+func (m *ListEuropeansRequest) GetTicker() string {
+	if m != nil {
+		return m.Ticker
+	}
+	return ""
+}
+
+func (m *ListEuropeansRequest) GetTimestamp() float64 {
+	if m != nil {
+		return m.Timestamp
+	}
+	return 0
+}
 
 type ListEuropeansResponse struct {
 	Europeans            []*European `protobuf:"bytes,1,rep,name=europeans,proto3" json:"europeans,omitempty"`
@@ -368,40 +384,40 @@ func init() {
 func init() { proto.RegisterFile("european.proto", fileDescriptor_4735b72c5277468d) }
 
 var fileDescriptor_4735b72c5277468d = []byte{
-	// 521 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x54, 0xc1, 0x6e, 0xd3, 0x40,
-	0x10, 0x95, 0x93, 0x92, 0x36, 0x53, 0x08, 0x65, 0x44, 0x22, 0x93, 0xe6, 0x10, 0x59, 0xaa, 0x08,
-	0x20, 0x6c, 0x29, 0x15, 0x42, 0xc0, 0x0d, 0xa8, 0xb8, 0x70, 0x40, 0x46, 0x5c, 0x10, 0x12, 0x72,
-	0x9c, 0x21, 0xac, 0xe2, 0x78, 0x17, 0x7b, 0x5d, 0x51, 0x21, 0x2e, 0x88, 0x3f, 0xe0, 0x6f, 0xf8,
-	0x0d, 0xfe, 0x00, 0xf1, 0x21, 0xc8, 0x6b, 0xaf, 0x9d, 0xc4, 0xab, 0xf4, 0xd2, 0xdb, 0xce, 0xcc,
-	0xce, 0x7b, 0xb3, 0xef, 0xad, 0x06, 0x7a, 0x94, 0x25, 0x5c, 0x50, 0x10, 0xbb, 0x22, 0xe1, 0x92,
-	0xe3, 0xad, 0x05, 0xe7, 0x42, 0x32, 0x1e, 0xbb, 0x21, 0x8f, 0x65, 0x12, 0x84, 0x72, 0x38, 0x5a,
-	0x70, 0xbe, 0x88, 0xc8, 0x0b, 0x04, 0xf3, 0x82, 0x38, 0xe6, 0x32, 0xc8, 0xeb, 0x69, 0xd1, 0x30,
-	0x3c, 0x2e, 0xab, 0x2a, 0x9a, 0x65, 0x9f, 0x3c, 0x5a, 0x09, 0x79, 0x51, 0x14, 0x9d, 0xdf, 0x16,
-	0x1c, 0x9c, 0x95, 0x04, 0x78, 0x04, 0xed, 0x8c, 0xcd, 0x6d, 0x6b, 0x6c, 0x4d, 0xba, 0x7e, 0x7e,
-	0xc4, 0x11, 0x74, 0x25, 0x5b, 0x51, 0x2a, 0x83, 0x95, 0xb0, 0x5b, 0x63, 0x6b, 0x62, 0xf9, 0x75,
-	0x02, 0x07, 0xd0, 0x91, 0x2c, 0x5c, 0x52, 0x62, 0xb7, 0x55, 0x4b, 0x19, 0xe5, 0x5d, 0x59, 0x3c,
-	0x2f, 0x4b, 0x7b, 0xaa, 0x54, 0x27, 0xf2, 0xae, 0x54, 0x26, 0x6c, 0x49, 0xf6, 0x35, 0x05, 0x58,
-	0x46, 0x79, 0x9e, 0xbe, 0x0a, 0x96, 0x5c, 0xd8, 0x9d, 0x22, 0x5f, 0x44, 0x68, 0xc3, 0xbe, 0xc8,
-	0x64, 0x18, 0x44, 0x91, 0xbd, 0xaf, 0xb0, 0x74, 0xe8, 0x0c, 0xe0, 0xf6, 0x6b, 0x96, 0x4a, 0x3d,
-	0x7f, 0xea, 0xd3, 0x97, 0x8c, 0x52, 0xe9, 0xf8, 0xd0, 0xdf, 0xca, 0xa7, 0x82, 0xc7, 0x29, 0xe1,
-	0x13, 0xe8, 0x6a, 0x35, 0x53, 0xdb, 0x1a, 0xb7, 0x27, 0x87, 0xd3, 0x63, 0xb7, 0xa1, 0xa7, 0xab,
-	0x1b, 0xfd, 0xfa, 0xb6, 0xf3, 0x01, 0xf0, 0x15, 0x55, 0x90, 0x25, 0x93, 0x41, 0xb1, 0x5a, 0x93,
-	0xd6, 0xb6, 0x26, 0xb5, 0x92, 0xed, 0x2d, 0x25, 0x9d, 0x37, 0xd0, 0x7f, 0x91, 0x50, 0x20, 0x69,
-	0x9b, 0xe0, 0x31, 0x1c, 0xe8, 0x19, 0x14, 0xcb, 0x25, 0x03, 0x57, 0x97, 0x73, 0xc4, 0x77, 0x62,
-	0x7e, 0x95, 0x88, 0xf7, 0xa0, 0xff, 0x92, 0x22, 0x6a, 0x22, 0x36, 0x44, 0x98, 0xfe, 0xdd, 0x83,
-	0x9b, 0xfa, 0xd6, 0x5b, 0x4a, 0xce, 0x59, 0x48, 0x78, 0x0e, 0x37, 0x36, 0x4c, 0xc1, 0xbb, 0x06,
-	0x5a, 0x93, 0x9d, 0xc3, 0xc9, 0xe5, 0x17, 0x0b, 0x7f, 0x1d, 0xfc, 0xf1, 0xe7, 0xdf, 0xaf, 0xd6,
-	0x75, 0x04, 0xaf, 0x32, 0x0e, 0x97, 0x70, 0xb8, 0x66, 0x1c, 0x9e, 0x18, 0xc0, 0x9a, 0xc6, 0x0e,
-	0x77, 0x69, 0xe2, 0xd8, 0x8a, 0x06, 0xf1, 0xa8, 0xa6, 0xf1, 0xbe, 0x65, 0x6c, 0xfe, 0x1d, 0x33,
-	0xe8, 0x6d, 0xfa, 0x88, 0xa6, 0xe1, 0x8d, 0x56, 0xef, 0xa6, 0x1c, 0x29, 0xca, 0x81, 0xb3, 0xf6,
-	0xb2, 0xa7, 0x95, 0x35, 0xf8, 0xd3, 0x82, 0xde, 0xa6, 0xdb, 0x46, 0x5e, 0xe3, 0x87, 0xd8, 0xcd,
-	0xfb, 0x40, 0xf1, 0x9e, 0x4c, 0xef, 0xac, 0x3f, 0xb5, 0xda, 0x48, 0xf9, 0x9b, 0xd7, 0xc6, 0x88,
-	0xa0, 0xb7, 0xf9, 0x43, 0x8c, 0x53, 0x18, 0x3f, 0xd1, 0x70, 0xe0, 0x16, 0x6b, 0xca, 0xd5, 0x6b,
-	0xca, 0x3d, 0xcb, 0xd7, 0x94, 0xd6, 0xfa, 0x7e, 0x43, 0xeb, 0xe7, 0x8f, 0xde, 0x9f, 0x2e, 0x98,
-	0xfc, 0x9c, 0xcd, 0xdc, 0x90, 0xaf, 0x3c, 0xcd, 0xf3, 0x90, 0xf1, 0xea, 0xec, 0x69, 0xce, 0x7c,
-	0x33, 0x3e, 0x0b, 0x04, 0xfb, 0x28, 0x66, 0xb3, 0x8e, 0x22, 0x38, 0xfd, 0x1f, 0x00, 0x00, 0xff,
-	0xff, 0x4a, 0xfd, 0x50, 0xda, 0x58, 0x05, 0x00, 0x00,
+	// 525 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x54, 0xd1, 0x8a, 0xd3, 0x4c,
+	0x14, 0x26, 0xed, 0xfe, 0xdd, 0xed, 0xd9, 0xdf, 0xba, 0x1e, 0x6c, 0x89, 0xd9, 0x5e, 0x94, 0xc0,
+	0x62, 0x55, 0x4c, 0xa0, 0x8b, 0x88, 0x7a, 0xa7, 0x2e, 0xde, 0xec, 0x85, 0x44, 0xbc, 0x11, 0x41,
+	0xd2, 0xf4, 0x58, 0x87, 0xa6, 0x99, 0x31, 0x99, 0x2c, 0x2e, 0xe2, 0x8d, 0xf8, 0x06, 0xbe, 0x8d,
+	0xaf, 0xe1, 0x1b, 0x88, 0x0f, 0x22, 0x99, 0x64, 0x92, 0xb4, 0x09, 0x5d, 0x10, 0xef, 0xe6, 0xcc,
+	0x99, 0xf3, 0x7d, 0xdf, 0x39, 0xdf, 0x70, 0x60, 0x40, 0x69, 0xcc, 0x05, 0xf9, 0x91, 0x23, 0x62,
+	0x2e, 0x39, 0xde, 0x58, 0x72, 0x2e, 0x24, 0xe3, 0x91, 0x13, 0xf0, 0x48, 0xc6, 0x7e, 0x20, 0xad,
+	0xf1, 0x92, 0xf3, 0x65, 0x48, 0xae, 0x2f, 0x98, 0xeb, 0x47, 0x11, 0x97, 0x7e, 0x96, 0x4f, 0xf2,
+	0x02, 0xeb, 0xb8, 0xc8, 0xaa, 0x68, 0x9e, 0xbe, 0x77, 0x69, 0x2d, 0xe4, 0x65, 0x9e, 0xb4, 0x7f,
+	0x18, 0x70, 0x70, 0x56, 0x10, 0xe0, 0x11, 0x74, 0x53, 0xb6, 0x30, 0x8d, 0x89, 0x31, 0xed, 0x7b,
+	0xd9, 0x11, 0xc7, 0xd0, 0x97, 0x6c, 0x4d, 0x89, 0xf4, 0xd7, 0xc2, 0xec, 0x4c, 0x8c, 0xa9, 0xe1,
+	0x55, 0x17, 0x38, 0x82, 0x9e, 0x64, 0xc1, 0x8a, 0x62, 0xb3, 0xab, 0x4a, 0x8a, 0x28, 0xab, 0x4a,
+	0xa3, 0x45, 0x91, 0xda, 0x53, 0xa9, 0xea, 0x22, 0xab, 0x4a, 0x64, 0xcc, 0x56, 0x64, 0xfe, 0xa7,
+	0x00, 0x8b, 0x28, 0xbb, 0xa7, 0x4f, 0x82, 0xc5, 0x97, 0x66, 0x2f, 0xbf, 0xcf, 0x23, 0x34, 0x61,
+	0x5f, 0xa4, 0x32, 0xf0, 0xc3, 0xd0, 0xdc, 0x57, 0x58, 0x3a, 0xb4, 0xcf, 0xe1, 0xe6, 0x39, 0x4b,
+	0xa4, 0xd6, 0x9f, 0x78, 0xf4, 0x31, 0xa5, 0x44, 0xd6, 0x74, 0x75, 0xb6, 0x75, 0x55, 0xdd, 0x74,
+	0xb7, 0xba, 0xb1, 0x3d, 0x18, 0x6e, 0xa1, 0x25, 0x82, 0x47, 0x09, 0xe1, 0x23, 0xe8, 0x6b, 0x0f,
+	0x12, 0xd3, 0x98, 0x74, 0xa7, 0x87, 0xb3, 0x63, 0xa7, 0xe1, 0x82, 0xa3, 0x0b, 0xbd, 0xea, 0xb5,
+	0xfd, 0x16, 0xf0, 0x05, 0x95, 0x90, 0x5a, 0x5f, 0x73, 0xce, 0x7f, 0xa7, 0xf8, 0x25, 0x0c, 0x9f,
+	0xc5, 0xe4, 0x4b, 0xda, 0x26, 0x78, 0x08, 0x07, 0x5a, 0x83, 0x62, 0xb9, 0x42, 0x70, 0xf9, 0x38,
+	0x43, 0x7c, 0x2d, 0x16, 0xff, 0x12, 0xf1, 0x0e, 0x0c, 0x9f, 0x53, 0x48, 0x4d, 0xc4, 0xc6, 0x10,
+	0x66, 0xbf, 0xf6, 0xe0, 0xba, 0x7e, 0xf5, 0x8a, 0xe2, 0x0b, 0x16, 0x10, 0x5e, 0xc0, 0xb5, 0x0d,
+	0x53, 0xf0, 0x76, 0x0b, 0x6d, 0xdb, 0x27, 0xb0, 0xa6, 0x57, 0x3f, 0xcc, 0xfd, 0xb5, 0xf1, 0xeb,
+	0xcf, 0xdf, 0xdf, 0x3b, 0xff, 0x23, 0xb8, 0xa5, 0x71, 0xb8, 0x82, 0xc3, 0x9a, 0x71, 0x78, 0xd2,
+	0x02, 0xd6, 0x34, 0xd6, 0xda, 0x35, 0x13, 0xdb, 0x54, 0x34, 0x88, 0x47, 0x15, 0x8d, 0xfb, 0x39,
+	0x65, 0x8b, 0x2f, 0x98, 0xc2, 0x60, 0xd3, 0x47, 0x6c, 0x13, 0xdf, 0x6a, 0xf5, 0x6e, 0xca, 0xb1,
+	0xa2, 0x1c, 0xd9, 0xb5, 0xce, 0x1e, 0x97, 0xd6, 0xe0, 0x37, 0x03, 0x06, 0x9b, 0x6e, 0xb7, 0xf2,
+	0xb6, 0x7e, 0x88, 0xdd, 0xbc, 0xf7, 0x14, 0xef, 0xc9, 0xec, 0x56, 0xbd, 0xd5, 0x72, 0x8f, 0x65,
+	0x3d, 0xd7, 0x64, 0x84, 0x30, 0xd8, 0xfc, 0x21, 0xad, 0x2a, 0x5a, 0x3f, 0x91, 0x35, 0x72, 0xf2,
+	0xe5, 0xe6, 0xe8, 0xe5, 0xe6, 0x9c, 0x65, 0xcb, 0x4d, 0xcf, 0xfa, 0x6e, 0x63, 0xd6, 0x4f, 0x1f,
+	0xbc, 0x39, 0x5d, 0x32, 0xf9, 0x21, 0x9d, 0x3b, 0x01, 0x5f, 0xbb, 0x9a, 0xe7, 0x3e, 0xe3, 0xe5,
+	0xd9, 0xd5, 0x9c, 0xd9, 0x3e, 0x7d, 0xe2, 0x0b, 0xf6, 0x4e, 0xcc, 0xe7, 0x3d, 0x45, 0x70, 0xfa,
+	0x27, 0x00, 0x00, 0xff, 0xff, 0xb7, 0x51, 0xf1, 0x79, 0x8e, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
