# contract/api/stock_quote.pb.go
@@ -121,54 +121,9 @@ func (m *StockQuote) GetHigh() float64 {
 	return 0
 }
 
-type SourceDecorator struct {
-	Uid                  string   `protobuf:"bytes,1,opt,name=uid,proto3" json:"uid,omitempty"`
-	Source               string   `protobuf:"bytes,2,opt,name=source,proto3" json:"source,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
-}
-
-func (m *SourceDecorator) Reset()         { *m = SourceDecorator{} }
-func (m *SourceDecorator) String() string { return proto.CompactTextString(m) }
-func (*SourceDecorator) ProtoMessage()    {}
-func (*SourceDecorator) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d489b2fd8b98c014, []int{1}
-}
-
-func (m *SourceDecorator) XXX_Unmarshal(b []byte) error {
-	return xxx_messageInfo_SourceDecorator.Unmarshal(m, b)
-}
-func (m *SourceDecorator) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
-	return xxx_messageInfo_SourceDecorator.Marshal(b, m, deterministic)
-}
-func (m *SourceDecorator) XXX_Merge(src proto.Message) {
-	xxx_messageInfo_SourceDecorator.Merge(m, src)
-}
-func (m *SourceDecorator) XXX_Size() int {
-	return xxx_messageInfo_SourceDecorator.Size(m)
-}
-func (m *SourceDecorator) XXX_DiscardUnknown() {
-	xxx_messageInfo_SourceDecorator.DiscardUnknown(m)
-}
-
-var xxx_messageInfo_SourceDecorator proto.InternalMessageInfo
-
-func (m *SourceDecorator) GetUid() string {
-	if m != nil {
-		return m.Uid
-	}
-	return ""
-}
-
-func (m *SourceDecorator) GetSource() string {
-	if m != nil {
-		return m.Source
-	}
-	return ""
-}
-
 type ListStockQuotesRequest struct {
+	Ticker               string   `protobuf:"bytes,2,opt,name=ticker,proto3" json:"ticker,omitempty"`
+	Timestamp            float64  `protobuf:"fixed64,3,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -178,7 +133,7 @@ func (m *ListStockQuotesRequest) Reset()         { *m = ListStockQuotesRequest{}
 func (m *ListStockQuotesRequest) String() string { return proto.CompactTextString(m) }
 func (*ListStockQuotesRequest) ProtoMessage()    {}
 func (*ListStockQuotesRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d489b2fd8b98c014, []int{2}
+	return fileDescriptor_d489b2fd8b98c014, []int{1}
 }
 
 func (m *ListStockQuotesRequest) XXX_Unmarshal(b []byte) error {
@@ -199,6 +154,20 @@ func (m *ListStockQuotesRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_ListStockQuotesRequest proto.InternalMessageInfo
 
+func (m *ListStockQuotesRequest) GetTicker() string {
+	if m != nil {
+		return m.Ticker
+	}
+	return ""
+}
+
+func (m *ListStockQuotesRequest) GetTimestamp() float64 {
+	if m != nil {
+		return m.Timestamp
+	}
+	return 0
+}
+
 type ListStockQuotesResponse struct {
 	StockQuotes          []*StockQuote `protobuf:"bytes,1,rep,name=stock_quotes,json=stockQuotes,proto3" json:"stock_quotes,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}      `json:"-"`
@@ -210,7 +179,7 @@ func (m *ListStockQuotesResponse) Reset()         { *m = ListStockQuotesResponse
 func (m *ListStockQuotesResponse) String() string { return proto.CompactTextString(m) }
 func (*ListStockQuotesResponse) ProtoMessage()    {}
 func (*ListStockQuotesResponse) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d489b2fd8b98c014, []int{3}
+	return fileDescriptor_d489b2fd8b98c014, []int{2}
 }
 
 func (m *ListStockQuotesResponse) XXX_Unmarshal(b []byte) error {
@@ -249,7 +218,7 @@ func (m *GetStockQuoteRequest) Reset()         { *m = GetStockQuoteRequest{} }
 func (m *GetStockQuoteRequest) String() string { return proto.CompactTextString(m) }
 func (*GetStockQuoteRequest) ProtoMessage()    {}
 func (*GetStockQuoteRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d489b2fd8b98c014, []int{4}
+	return fileDescriptor_d489b2fd8b98c014, []int{3}
 }
 
 func (m *GetStockQuoteRequest) XXX_Unmarshal(b []byte) error {
@@ -288,7 +257,7 @@ func (m *CreateStockQuoteRequest) Reset()         { *m = CreateStockQuoteRequest
 func (m *CreateStockQuoteRequest) String() string { return proto.CompactTextString(m) }
 func (*CreateStockQuoteRequest) ProtoMessage()    {}
 func (*CreateStockQuoteRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d489b2fd8b98c014, []int{5}
+	return fileDescriptor_d489b2fd8b98c014, []int{4}
 }
 
 func (m *CreateStockQuoteRequest) XXX_Unmarshal(b []byte) error {
@@ -327,7 +296,7 @@ func (m *UpdateStockQuoteRequest) Reset()         { *m = UpdateStockQuoteRequest
 func (m *UpdateStockQuoteRequest) String() string { return proto.CompactTextString(m) }
 func (*UpdateStockQuoteRequest) ProtoMessage()    {}
 func (*UpdateStockQuoteRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d489b2fd8b98c014, []int{6}
+	return fileDescriptor_d489b2fd8b98c014, []int{5}
 }
 
 func (m *UpdateStockQuoteRequest) XXX_Unmarshal(b []byte) error {
@@ -366,7 +335,7 @@ func (m *DeleteStockQuoteRequest) Reset()         { *m = DeleteStockQuoteRequest
 func (m *DeleteStockQuoteRequest) String() string { return proto.CompactTextString(m) }
 func (*DeleteStockQuoteRequest) ProtoMessage()    {}
 func (*DeleteStockQuoteRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d489b2fd8b98c014, []int{7}
+	return fileDescriptor_d489b2fd8b98c014, []int{6}
 }
 
 func (m *DeleteStockQuoteRequest) XXX_Unmarshal(b []byte) error {
@@ -396,7 +365,6 @@ func (m *DeleteStockQuoteRequest) GetStockQuoteId() string {
 
 func init() {
 	proto.RegisterType((*StockQuote)(nil), "gooption.contract.StockQuote")
-	proto.RegisterType((*SourceDecorator)(nil), "gooption.contract.SourceDecorator")
 	proto.RegisterType((*ListStockQuotesRequest)(nil), "gooption.contract.ListStockQuotesRequest")
 	proto.RegisterType((*ListStockQuotesResponse)(nil), "gooption.contract.ListStockQuotesResponse")
 	proto.RegisterType((*GetStockQuoteRequest)(nil), "gooption.contract.GetStockQuoteRequest")
@@ -408,43 +376,42 @@ func init() {
 func init() { proto.RegisterFile("stock_quote.proto", fileDescriptor_d489b2fd8b98c014) }
 
 var fileDescriptor_d489b2fd8b98c014 = []byte{
-	// 573 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x54, 0xdd, 0x6e, 0x12, 0x41,
-	0x14, 0xce, 0x96, 0x82, 0x72, 0x68, 0x05, 0x26, 0x15, 0x36, 0x88, 0x4a, 0x36, 0x46, 0xb1, 0x89,
-	0xbb, 0x09, 0xd5, 0x1b, 0x6b, 0xd4, 0x68, 0x8d, 0x31, 0xf1, 0x46, 0x88, 0x17, 0xea, 0x05, 0x59,
-	0x96, 0x11, 0x26, 0x85, 0x3d, 0xd3, 0x9d, 0xd9, 0x1a, 0x63, 0x6a, 0xa3, 0xaf, 0xd0, 0x07, 0xf1,
-	0x05, 0x7c, 0x0b, 0x5f, 0xc1, 0x07, 0x31, 0x33, 0x0b, 0xdd, 0x5d, 0x58, 0xa4, 0x37, 0xbd, 0x3b,
-	0x3f, 0x73, 0xbe, 0xf3, 0x9d, 0xf9, 0x4e, 0x0e, 0x54, 0x85, 0x44, 0xef, 0xb0, 0x7f, 0x14, 0xa2,
-	0xa4, 0x36, 0x0f, 0x50, 0x22, 0xa9, 0x8e, 0x10, 0xb9, 0x64, 0xe8, 0xdb, 0x1e, 0xfa, 0x32, 0x70,
-	0x3d, 0xd9, 0x68, 0x8e, 0x10, 0x47, 0x13, 0xea, 0xb8, 0x9c, 0x39, 0xae, 0xef, 0xa3, 0x74, 0x55,
-	0x5e, 0x44, 0x05, 0x8d, 0x1b, 0xb3, 0xac, 0xf6, 0x06, 0xe1, 0x67, 0x87, 0x4e, 0xb9, 0xfc, 0x1a,
-	0x25, 0xad, 0xdf, 0x06, 0x40, 0x4f, 0xf5, 0x78, 0xa7, 0x5a, 0x90, 0x0a, 0xe4, 0x42, 0x36, 0x34,
-	0x8d, 0x96, 0xd1, 0x2e, 0x76, 0x95, 0x49, 0x9a, 0x50, 0x94, 0x6c, 0x4a, 0x85, 0x74, 0xa7, 0xdc,
-	0xdc, 0x68, 0x19, 0x6d, 0xa3, 0x1b, 0x07, 0x48, 0x0d, 0x0a, 0x92, 0x79, 0x87, 0x34, 0x30, 0x73,
-	0xba, 0x64, 0xe6, 0x11, 0x02, 0x9b, 0xc8, 0xa9, 0x6f, 0x6e, 0xea, 0x02, 0x6d, 0x93, 0x1d, 0xc8,
-	0x7b, 0x13, 0x14, 0xd4, 0xcc, 0xeb, 0x60, 0xe4, 0x28, 0x84, 0x63, 0x9c, 0x84, 0x53, 0x6a, 0x16,
-	0x74, 0x78, 0xe6, 0x29, 0x26, 0x13, 0xfc, 0x62, 0x5e, 0xd1, 0x41, 0x65, 0x2a, 0xcc, 0x31, 0x1b,
-	0x8d, 0xcd, 0xab, 0x11, 0xa6, 0xb2, 0xad, 0x7d, 0x28, 0xf7, 0x30, 0x0c, 0x3c, 0x7a, 0x40, 0x3d,
-	0x0c, 0x5c, 0x89, 0x41, 0xc6, 0x08, 0x35, 0x28, 0x08, 0xfd, 0x48, 0xf3, 0x2f, 0x76, 0x67, 0x9e,
-	0x65, 0x42, 0xed, 0x2d, 0x13, 0x32, 0x1e, 0x5f, 0x74, 0xe9, 0x51, 0x48, 0x85, 0xb4, 0x3e, 0x41,
-	0x7d, 0x29, 0x23, 0x38, 0xfa, 0x82, 0x92, 0xe7, 0xb0, 0x95, 0xd0, 0x44, 0x98, 0x46, 0x2b, 0xd7,
-	0x2e, 0x75, 0x6e, 0xda, 0x4b, 0xaa, 0xd8, 0x71, 0x75, 0xb7, 0x24, 0x62, 0x24, 0xeb, 0x09, 0xec,
-	0xbc, 0xa6, 0x09, 0xec, 0x59, 0x53, 0x72, 0x07, 0xae, 0x25, 0x90, 0xfb, 0xe7, 0x33, 0x6c, 0xc5,
-	0xc5, 0x6f, 0x86, 0xd6, 0x07, 0xa8, 0xbf, 0x0c, 0xa8, 0x2b, 0xe9, 0x32, 0xc0, 0x53, 0x28, 0x25,
-	0x00, 0x74, 0xf5, 0x5a, 0x66, 0x10, 0x83, 0x2b, 0xe8, 0xf7, 0x7c, 0x78, 0x29, 0xd0, 0xcf, 0xa0,
-	0x7e, 0x40, 0x27, 0x34, 0x0b, 0xfa, 0x42, 0x63, 0x77, 0x7e, 0xe5, 0xa1, 0x1a, 0xd7, 0xf6, 0x68,
-	0x70, 0xcc, 0x3c, 0x4a, 0x4e, 0xa1, 0xbc, 0xa0, 0x13, 0xb9, 0x9f, 0x41, 0x2a, 0x5b, 0xe5, 0xc6,
-	0xee, 0x45, 0x9e, 0x46, 0xb2, 0x5b, 0xd7, 0x7f, 0xfe, 0xf9, 0x7b, 0xb6, 0x51, 0x26, 0xdb, 0x4e,
-	0x52, 0x7d, 0x72, 0x0a, 0xdb, 0x29, 0x2d, 0xc9, 0xbd, 0x0c, 0xcc, 0x2c, 0xb5, 0x1b, 0xff, 0xff,
-	0x3c, 0xeb, 0xae, 0xee, 0xd7, 0x22, 0xb7, 0x52, 0xfd, 0x9c, 0x6f, 0xe9, 0xaf, 0x3a, 0x21, 0x3f,
-	0x0c, 0xa8, 0x2c, 0xee, 0x03, 0xc9, 0x1a, 0x6c, 0xc5, 0xd2, 0xac, 0xe3, 0x61, 0x69, 0x1e, 0x4d,
-	0x2b, 0x3d, 0xf7, 0xe3, 0xe4, 0x36, 0x90, 0x33, 0x03, 0x2a, 0x8b, 0x8b, 0x93, 0xc9, 0x61, 0xc5,
-	0x76, 0xad, 0xe3, 0xf0, 0x50, 0x73, 0xb0, 0x3b, 0xb7, 0x57, 0xff, 0x85, 0x1d, 0xb2, 0xe1, 0x49,
-	0x9a, 0xd5, 0x77, 0xa8, 0x2c, 0xae, 0x5c, 0x26, 0xa9, 0x15, 0x7b, 0xd9, 0xa8, 0xd9, 0xd1, 0xdd,
-	0xb4, 0xe7, 0x77, 0xd3, 0x7e, 0xa5, 0xee, 0xe6, 0x5c, 0x99, 0xdd, 0x35, 0xca, 0xbc, 0x78, 0xf4,
-	0x71, 0x6f, 0xc4, 0xe4, 0x38, 0x1c, 0xd8, 0x1e, 0x4e, 0x9d, 0x79, 0xdf, 0x07, 0x0c, 0xcf, 0x6d,
-	0x67, 0xce, 0x41, 0x1d, 0xee, 0x7d, 0x97, 0xb3, 0x3e, 0x1f, 0x0c, 0x0a, 0xba, 0xdd, 0xde, 0xbf,
-	0x00, 0x00, 0x00, 0xff, 0xff, 0x57, 0x8a, 0x26, 0x4f, 0xfa, 0x05, 0x00, 0x00,
+	// 558 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x54, 0x5d, 0x6e, 0xd3, 0x40,
+	0x10, 0x96, 0x9b, 0x26, 0xd0, 0x49, 0x4b, 0x93, 0x55, 0x49, 0xac, 0x10, 0x20, 0xb2, 0x10, 0x84,
+	0x4a, 0xac, 0xa5, 0x14, 0x5e, 0x00, 0x01, 0xe2, 0x47, 0x08, 0x09, 0x21, 0x91, 0x8a, 0x07, 0xe0,
+	0x21, 0x72, 0x9c, 0x25, 0x59, 0xd5, 0xf6, 0x6e, 0xbd, 0xeb, 0x22, 0x84, 0x4a, 0x05, 0x57, 0xe8,
+	0x41, 0xb8, 0x00, 0xb7, 0xe0, 0x0a, 0x1c, 0x04, 0xed, 0x3a, 0xae, 0x7f, 0xe2, 0x90, 0xbe, 0xf0,
+	0x36, 0x3b, 0xf6, 0x7c, 0xf3, 0xcd, 0x7c, 0x9f, 0x06, 0x9a, 0x42, 0x32, 0xf7, 0x60, 0x74, 0x18,
+	0x31, 0x49, 0x30, 0x0f, 0x99, 0x64, 0xa8, 0x39, 0x65, 0x8c, 0x4b, 0xca, 0x02, 0xec, 0xb2, 0x40,
+	0x86, 0x8e, 0x2b, 0x3b, 0xdd, 0x29, 0x63, 0x53, 0x8f, 0xd8, 0x0e, 0xa7, 0xb6, 0x13, 0x04, 0x4c,
+	0x3a, 0xea, 0xbb, 0x88, 0x0b, 0x3a, 0x57, 0xe6, 0x5f, 0xf5, 0x6b, 0x1c, 0x7d, 0xb2, 0x89, 0xcf,
+	0xe5, 0x97, 0xf8, 0xa3, 0xf5, 0xcb, 0x00, 0xd8, 0x57, 0x3d, 0xde, 0xaa, 0x16, 0xa8, 0x01, 0x95,
+	0x88, 0x4e, 0x4c, 0xa3, 0x67, 0xf4, 0x37, 0x86, 0x2a, 0x44, 0x5d, 0xd8, 0x90, 0xd4, 0x27, 0x42,
+	0x3a, 0x3e, 0x37, 0xd7, 0x7a, 0x46, 0xdf, 0x18, 0xa6, 0x09, 0xd4, 0x82, 0x9a, 0xa4, 0xee, 0x01,
+	0x09, 0xcd, 0x8a, 0x2e, 0x99, 0xbf, 0x10, 0x82, 0x75, 0xc6, 0x49, 0x60, 0xae, 0xeb, 0x02, 0x1d,
+	0xa3, 0x1d, 0xa8, 0xba, 0x1e, 0x13, 0xc4, 0xac, 0xea, 0x64, 0xfc, 0x50, 0x08, 0x47, 0xcc, 0x8b,
+	0x7c, 0x62, 0xd6, 0x74, 0x7a, 0xfe, 0x52, 0x4c, 0x3c, 0xf6, 0xd9, 0xbc, 0xa0, 0x93, 0x2a, 0x54,
+	0x98, 0x33, 0x3a, 0x9d, 0x99, 0x17, 0x63, 0x4c, 0x15, 0x5b, 0x6f, 0xa0, 0xf5, 0x9a, 0x0a, 0x99,
+	0x4e, 0x20, 0x86, 0xe4, 0x30, 0x22, 0x42, 0x66, 0x98, 0xad, 0xe5, 0x98, 0xe5, 0xe6, 0xa9, 0x14,
+	0xe6, 0xb1, 0x3e, 0x42, 0x7b, 0x01, 0x4f, 0x70, 0x16, 0x08, 0x82, 0x9e, 0xc0, 0x66, 0x46, 0x0c,
+	0x61, 0x1a, 0xbd, 0x4a, 0xbf, 0x3e, 0xb8, 0x8a, 0x17, 0xe4, 0xc0, 0x69, 0xf5, 0xb0, 0x2e, 0x52,
+	0x24, 0xeb, 0x21, 0xec, 0xbc, 0x24, 0x19, 0xec, 0x84, 0xea, 0x0d, 0xb8, 0x94, 0x41, 0x1e, 0x9d,
+	0xed, 0x7f, 0x33, 0x2d, 0x7e, 0x35, 0xb1, 0xde, 0x43, 0xfb, 0x59, 0x48, 0x1c, 0x49, 0x16, 0x01,
+	0x1e, 0x41, 0x3d, 0x03, 0xa0, 0xab, 0x57, 0x32, 0x83, 0x14, 0x5c, 0x41, 0xbf, 0xe3, 0x93, 0xff,
+	0x02, 0xfd, 0x18, 0xda, 0xcf, 0x89, 0x47, 0xca, 0xa0, 0xcf, 0x35, 0xf6, 0xe0, 0x67, 0x15, 0x9a,
+	0x69, 0xed, 0x3e, 0x09, 0x8f, 0xa8, 0x4b, 0xd0, 0x09, 0x6c, 0x17, 0x74, 0x42, 0xb7, 0x4b, 0x48,
+	0x95, 0x7b, 0xa3, 0xb3, 0x7b, 0x9e, 0x5f, 0x63, 0xd9, 0xad, 0xcb, 0x3f, 0x7e, 0xff, 0x39, 0x5d,
+	0xdb, 0x46, 0x5b, 0x76, 0x56, 0x7d, 0x74, 0x02, 0x5b, 0x39, 0x2d, 0xd1, 0xad, 0x12, 0xcc, 0x32,
+	0xb5, 0x3b, 0xff, 0x5e, 0x9e, 0x75, 0x53, 0xf7, 0xeb, 0xa1, 0x6b, 0xb9, 0x7e, 0xf6, 0xd7, 0xfc,
+	0xaa, 0x8e, 0xd1, 0x77, 0x03, 0x1a, 0x45, 0x3f, 0xa0, 0xb2, 0xc1, 0x96, 0x98, 0x66, 0x15, 0x0f,
+	0x4b, 0xf3, 0xe8, 0x5a, 0xf9, 0xb9, 0xef, 0x67, 0xdd, 0x80, 0x4e, 0x0d, 0x68, 0x14, 0x8d, 0x53,
+	0xca, 0x61, 0x89, 0xbb, 0x56, 0x71, 0xb8, 0xab, 0x39, 0xe0, 0xc1, 0xf5, 0xe5, 0xbb, 0xc0, 0x11,
+	0x9d, 0x1c, 0xe7, 0x59, 0x7d, 0x83, 0x46, 0xd1, 0x72, 0xa5, 0xa4, 0x96, 0xf8, 0xb2, 0xd3, 0xc2,
+	0xf1, 0xc1, 0xc4, 0xc9, 0xc1, 0xc4, 0x2f, 0xd4, 0xc1, 0x4c, 0x94, 0xd9, 0x5d, 0xa1, 0xcc, 0xd3,
+	0x7b, 0x1f, 0xf6, 0xa6, 0x54, 0xce, 0xa2, 0x31, 0x76, 0x99, 0x6f, 0x27, 0x7d, 0xef, 0x50, 0x76,
+	0x16, 0xdb, 0x09, 0x07, 0x75, 0xb1, 0x1f, 0x38, 0x9c, 0x8e, 0xf8, 0x78, 0x5c, 0xd3, 0xed, 0xf6,
+	0xfe, 0x06, 0x00, 0x00, 0xff, 0xff, 0x37, 0x2a, 0x7e, 0x02, 0xf3, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
